fix(details.page): align asset info text to left

--- a/src/app/features/home/details/details.page.scss
+++ b/src/app/features/home/details/details.page.scss
@@ -131,6 +131,7 @@ mat-panel-title {
   color: #6f6f6f;
   font-size: 16px;
   margin: 4px 0;
+  text-align: start;
 
   .asset-info-key {
     color: white;
